// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Text > default 1`] = `
<div
  class="css-s2a19m"
  dir="auto"
>
  Text
</div>
`;

exports[`Text > nested 1`] = `
<div
  class="css-s2a19m"
  dir="auto"
>
  <span
    class="css-17p82t7"
    data-testid="child"
  >
    Text
  </span>
</div>
`;

exports[`Text > prop "aria-label" > value is set 1`] = `
<div
  aria-label="accessibility label"
  class="css-s2a19m"
  dir="auto"
>
  Text
</div>
`;

exports[`Text > prop "aria-labelledby" > value is set 1`] = `
<div
  aria-labelledby="123"
  class="css-s2a19m"
  dir="auto"
>
  Text
</div>
`;

exports[`Text > prop "aria-live" > value is set 1`] = `
<div
  aria-live="polite"
  class="css-s2a19m"
  dir="auto"
>
  Text
</div>
`;

exports[`Text > prop "dir" > value is "ltr" 1`] = `
<div
  class="css-s2a19m"
  dir="ltr"
>
  Text
</div>
`;

exports[`Text > prop "dir" > value is "rtl" 1`] = `
<div
  class="css-s2a19m"
  dir="rtl"
/>
`;

exports[`Text > prop "href" > href with role 1`] = `
<div
  class="css-s2a19m"
  dir="auto"
  role="presentation"
/>
`;

exports[`Text > prop "href" > value is set 1`] = `
<a
  class="css-s2a19m"
  dir="auto"
  href="https://example.com"
>
  Text
</a>
`;

exports[`Text > prop "hrefAttrs" > null values are excluded 1`] = `
<a
  class="css-s2a19m"
  dir="auto"
  href="https://example.com"
/>
`;

exports[`Text > prop "hrefAttrs" > requires "href" 1`] = `
<div
  class="css-s2a19m"
  dir="auto"
/>
`;

exports[`Text > prop "hrefAttrs" > target variant is set 1`] = `
<a
  class="css-s2a19m"
  dir="auto"
  href="https://example.com"
  target="_blank"
/>
`;

exports[`Text > prop "hrefAttrs" > value is set 1`] = `
<a
  class="css-s2a19m"
  dir="auto"
  download="filename.jpg"
  href="https://example.com"
  rel="nofollow"
  target="_blank"
>
  Text
</a>
`;

exports[`Text > prop "id" > value is set 1`] = `
<div
  class="css-s2a19m"
  dir="auto"
  id="ID"
>
  Text
</div>
`;

exports[`Text > prop "lang" > ar 1`] = `
<div
  class="css-s2a19m"
  dir="rtl"
  lang="ar"
/>
`;

exports[`Text > prop "lang" > fr 1`] = `
<div
  class="css-s2a19m"
  dir="ltr"
  lang="fr"
>
  Text
</div>
`;

exports[`Text > prop "lang" > undefined 1`] = `
<div
  class="css-s2a19m"
  dir="auto"
/>
`;

exports[`Text > prop "lang" > with dir 1`] = `
<div
  class="css-s2a19m"
  dir="ltr"
  lang="ar"
/>
`;

exports[`Text > prop "numberOfLines" > value is set 1`] = `
<div
  class="css-s2a19m"
  dir="auto"
  style="--number-of-lines: 3; display: -webkit-box; max-width: 100%; overflow: hidden; text-overflow: ellipsis; -webkit-line-clamp: var(--number-of-lines);"
>
  Text
Text
Text
Text
</div>
`;

exports[`Text > prop "numberOfLines" > value is set to one 1`] = `
<div
  class="css-9b5oar"
  dir="auto"
  style="--number-of-lines: 1;"
/>
`;

exports[`Text > prop "role" > value alters HTML element 1`] = `
<article
  class="css-s2a19m"
  dir="auto"
/>
`;

exports[`Text > prop "role" > value is "button" 1`] = `
<button
  class="css-s2a19m"
  dir="auto"
  type="button"
/>
`;

exports[`Text > prop "role" > value is set 1`] = `
<div
  class="css-s2a19m"
  dir="auto"
  role="presentation"
>
  Text
</div>
`;

exports[`Text > prop "style" > value is set 1`] = `
<div
  class="css-s2a19m"
  dir="auto"
  style="border-width: 5px;"
>
  Text
</div>
`;

exports[`Text > prop "testID" > value is set 1`] = `
<div
  class="css-s2a19m"
  data-testid="123"
  dir="auto"
>
  Text
</div>
`;
